# kk

./: Cargo.toml  README.md  config.json  config.jsonc
src/: action.rs  anchor.rs  app.rs  buffer.rs  clipboard.rs  command.rs  config.rs  grep_mode.rs  keybindings.rs  legend.rs  lib.rs  main.rs  mame.rs  message_line.rs  renderer_legend.rs  renderer_message_line.rs  renderer_status_line.rs  renderer_text_area.rs  state.rs  status_line.rs  text_area.rs
