[package]
name = "kk"
version = "0.0.1"
edition = "2024"
authors = ["Takeru Ohta <phjgt308@gmail.com>"]
license = "MIT"
description = "A TUI text editor"
homepage = "https://github.com/sile/kk"
repository = "https://github.com/sile/kk"
readme = "README.md"

[dependencies]
mame = "0.1.0"
noargs = "0.4.1"
nojson = "0.3.2"
orfail = "1.1.0"
tuinix = "0.3.0"
